test/valid/IntegerCollections/BinaryTreeEmpty.plume
/**
 * An empty tree. 
 *
 * @author Diogo Marques, 30100
 */
class BinaryTreeEmpty extends BinaryTree is

	method override size : () -> Integer is
		0
    
	method override root : () -> Integer is
		error
	
	method override sum : () -> Integer is
		0
	
	method override min : () -> Integer is
		2147483647 // Integer.MAX_VALUE
	
	method override max : () -> Integer is
		-2147483647 // Integer.MIN_VALUE+1 to avoid NumberFormatException
	
	method override toString : () -> String is
		"()"